12. Dez. 2012 - amo -  ASubComponent, add mutex to synchronize lock handler of component
12. Dez. 2012 - amo -  Add TearDownWorker to manage @OnTearDown outside application thread for Stete- and stateless components. Update TearDownHandler for use with TearDownWorker
11. Dez. 2012 - amo -  StateLessComponentRunWorker handle OnStart annotation, set component to started after init.
11. Dez. 2012 - amo -  StateComponentRunWorker create postHandle method for Teardown and moved execution to worker thread. OnStart and OnTeardown are now executed in worker.
11. Dez. 2012 - amo -  FXComponentInitWorker: moved runPreInitMethods from constructor to call method, to prevent excecution outside appThread RunInvokeLater is used, this should avoid synchronisation twice AND the method will be called AFTER component lock was called
10. Dez. 2012 - amo -  added TearDownHandler to execute all @TearDown annotations when application is closed, updated AFXWorkbench to use TearDownHandler
10. Dez. 2012 - amo -  Fixed in StateComponentRunWorker: OnStart and OnTeardown annotations activated
06. Dez. 2012 - amo -  Fixed in FXComponentReplaceWorker, Active(false) was only evaluated in handle method but never in postHandle method
06. Dez. 2012 - amo -  Fixed StateComponentRunWorker, set component to "started" after init
27. Nov. 2012 - amo -  Fixed nullpointer in FXComponentWorker when component does not return a valid component.
12. Sep. 2012 - amo -  update FXAction to ensure thread safety
06. Sep. 2012 - amo -  changed inner and outer locking of component in worker threads; inner locking replaced by wait/notify. At the end on nonJavaFX thread a wait starts... when JavaFX application Thread finishes he notifies so execution loop can proceed. Outer loop: semaphore replaces an atomic boolean lock
28. Aug. 2012 - amo -  Created  process to Shutdown all JacpFX correct; Created ShutdownUtil class; set name of JacpFX Threads